@@ -1,0 +1,30 @@
+/*******************************************************************************
+ * Portions created by Sebastian Thomschke are copyright (c) 2005-2008 Sebastian
+ * Thomschke.
+ * 
+ * All Rights Reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ * 
+ * Contributors:
+ *     Sebastian Thomschke - initial implementation.
+ *******************************************************************************/
+package net.sf.oval.internal.util;
+
+import java.util.LinkedList;
+
+/**
+ * @author Sebastian Thomschke
+ */
+public class ThreadLocalLinkedList<T> extends ThreadLocal<LinkedList<T>>
+{
+	/**
+	 * {@inheritDoc}
+	 */
+	@Override
+	public LinkedList<T> initialValue()
+	{
+		return new LinkedList<T>();
+	}
+}
