@@ -221,7 +221,8 @@ public class CustomAssertValidTest extends TestCase
 		registry.personsByCity.clear();
 		registry.personsByCity.put("city1", Arrays.asList(new Person[]{invalidPerson1, invalidPerson1, invalidPerson2,
 				invalidPerson2}));
-		assertEquals(4, validator.validate(registry).size());
+		// still only two since invalidAddress1 and invalidAddress2 have already been validated
+		assertEquals(2, validator.validate(registry).size());
 
 		registry.personsByCity.clear();
 
@@ -236,7 +237,7 @@ public class CustomAssertValidTest extends TestCase
 		assertEquals(0, validator.validate(registry).size());
 
 		registry.addressClusters.add(new Address[]{invalidAddress1, invalidAddress2, invalidAddress1, invalidAddress2});
-		assertEquals(4, validator.validate(registry).size());
+		assertEquals(2, validator.validate(registry).size());
 
 		registry.addressClusters.clear();
 
@@ -250,7 +251,8 @@ public class CustomAssertValidTest extends TestCase
 
 		registry.addressesByCityAndStreet.get("city1").put("street1",
 				new Address[]{invalidAddress1, invalidAddress1, invalidAddress2, invalidAddress2});
-		assertEquals(4, validator.validate(registry).size());
+		// still only two since invalidAddress1 and invalidAddress2 have already been validated
+		assertEquals(2, validator.validate(registry).size());
 	}
 
 	public void testScalarValues()
