@@ -10,7 +10,8 @@
 - fixed an issue where OVal was translating exception thrown by guarded methods into ValidationFailedException
 - fixed bug [ 2164438 ] SerializableField bug when dealing with private fields
 - fixed bug [ 2166232 ] JPAAnnotationsConfigurer should use AssertValidCheck for @ManyToMany
-
+- fixed bug [ 2192175 ] Validator.validate checks the same object multiple times
+ 
 2008-08-10 v1.30
 ================
 - fixed an StackOverflowError that occurs when referencing the same property via _this.<property_name> in scripted pre/post conditions
